# ConnectionManager

./: CMakeLists.txt  ConnectionManagerConfig.h.in  arm-rpi.cmake  build.sh  build_rpi.sh
src/: CMakeLists.txt  ClientTest.cpp  ServerTest.cpp  connection.h  main.cpp
src/Hackday/: CMakeLists.txt  PackageType.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  Server.cpp  Server.h  ServerMedia.cpp  ServerMedia.h  main.cpp
src/Hackday/Observer/: CMakeLists.txt  Event.h  EventMultiple.h  EventSingle.h  IObserverId.h  Observable.h
src/Hackday/ServerMedia/: CMakeLists.txt  main.cpp
src/connection/: CMakeLists.txt  ConnectionBase.cpp  ConnectionBase.h  ConnectionManager_types.h  ConnectionTCP.cpp  ConnectionTCP.h  ConnectionUDP.cpp  ConnectionUDP.h  connection_types.h
src/connexion/: CMakeLists.txt  ConnectionBase.cpp  ConnectionBase.h  ConnectionManager_types.h  ConnectionTCP.cpp  ConnectionTCP.h  ConnectionUDP.cpp  ConnectionUDP.h  connection.h  connexion.cpp  connexion.h  connexion_modes.cpp  connexion_modes.h  socket_interface.cpp  socket_interface.h  types.h
src/manager/: CMakeLists.txt  ConnectionBuilder.cpp  ConnectionBuilder.h  ConnectionManager.cpp  ConnectionManager.h
src/socket/: CMakeLists.txt  socket_interface.cpp  socket_interface.h
